Fixes to navbar in mobile, navbar spacing and fixed links to adminstrative lists in frontpage

--- a/src/app/shared/navbar/navbar.component.scss
+++ b/src/app/shared/navbar/navbar.component.scss
@@ -1,15 +1,25 @@
 @import '../../../assets/styles/vars';
 
 #mainNav {
+    font-size: 14px;
     font-weight: 700;
     font-family: $font-montserrat;
     background: $primary;
 }
 
-@media (max-width: 1199.98px) {
+
+@media screen and (max-width: 989px) {
+    #mainNav {font-size: 16px;}
+    #dropdown-menu-item {font-size: 16px;}
+
+}
+@media screen and (max-width: 1040px) {
     #mainNav {font-size: 12px;}
     #dropdown-menu-item {font-size: 12px;}
+
 }
+
+
 
 #mainNav .navbar-brand {
     color: $content-background;
@@ -25,6 +35,7 @@
     align-items: center;     
     a {
         color: $content-background;
+     
     }
 }
 
@@ -32,6 +43,8 @@
 #mainNav .navbar-nav li.nav-item a.nav-link {
     color: $content-background;
     background: $primary;
+    padding-right:10px;
+    padding-left:10px;
 }
 
 #mainNav .navbar-nav li.nav-item a.nav-link:hover {
@@ -59,6 +72,8 @@
 }
 
 #dropdown-toggle {
+    padding-left:10px;
+    padding-right:10px;
     background: $primary;
     cursor: pointer;
     &:hover {
